# uMetronome

./: CMakeLists.txt  Main.qml  Makefile  README  README.md  manifest.json  manifest.json.in  uMetronome.desktop  uMetronome.pro
app/: ATempoPicker.qml  BeatSelector.qml  Beats.qml  CMakeLists.txt  Main-Copy.qml  Main.qml  MetronomeToolButton.qml  PopoverHeader.qml  SaveSettingsDialog.qml  SettingsToolButton.qml  StartToolButton.qml  TempoDialog.qml  TempoFinder.qml  dbFunctions.js  uMetronome.desktop.in
app/tests/autopilot/: run
app/tests/autopilot/uMetronome/tests/: __init__.py
backend/: CMakeLists.txt
backend/UMetronome/: UMetronome.pro  backend.cpp  qmldir  uTimer.cpp  uTimer.h
backend/modules/UMetronome/: backend.cpp  backend.h  uTimer.h
backend/tests/unit/: tst_mytype.qml
cmake/: Click.cmake
components/: ATempoPicker.qml  BeatSelector.qml  Beats.qml  MetronomeToolButton.qml  MyListElement.qml  SettingsToolButton.qml  Sound.qml  StartToolButton.qml  TempoDialog.qml  effectFunctions.js
po/: template.pot  umetronome.oliver-nic012.pot  umetronome.pot
tests/autopilot/: run
tests/autopilot/uMetronome/: __init__.py  test_main.py
uMetronome/: BeatSelector.qml  Beats.qml  LeftRotation.qml  Main-Copy.qml  Main.qml  MetronomeToolButton.qml  PopoverHeader.qml  RightRotation.qml  SaveSettingsDialog.qml  SettingsToolButton.qml  dbFunctions.js  effectFunctions.js  uMetronome.desktop  uMetronome.pro
uMetronome/tests/autopilot/uMetronome/tests/: __init__.py  test_main.py
ui/: HelloTab.qml  WorldTab.qml  WorldTabTools.qml
